[package]
name = "feitu"
version = "0.1.0"
edition = "2024"

[dependencies]
scraper = "0.25"
regex = "1.12.3"
reqwest = { version = "0.13.2" }
anyhow = "1.0.102"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
epub-builder = "0.8.2"
